# nail-app

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 0001_initial.py  0002_add_availability_slots.py  0003_client_saved_masters.py  0004_bigint_telegram_user_ids.py
app/: __init__.py  asgi.py  main.py
app/adapters/: __init__.py  image_to_text.py  time_utils.py
app/adapters/llm/: base.py  factory.py  mock.py  openai_parser.py
app/api/: client_routes.py  main.py  mock_csv_routes.py
app/bot/: __init__.py  bot_factory.py  parsers.py  webhook.py
app/bot/handlers/: __init__.py  client_booking.py  master_bookings.py  master_clients.py  master_schedule.py  master_services.py  master_share.py  start.py
app/bot/texts/: ru.py
app/config/: __init__.py  logging.py  settings.py
app/db/: __init__.py  base.py  models.py
app/domain/: __init__.py  booking_rules.py  models.py  price_list.py
app/services/: __init__.py  master_service.py
nail_app_core/: __init__.py
nail_app_core/db/: models.py
nail_app_core/domain/: booking_rules.py  models.py
nail_app_core/services/: __init__.py  booking_service.py
tests/: test_booking_atomic.py  test_booking_slots.py  test_bot_master_commands.py  test_parse_services_text.py  test_price_list_validation.py
