[tool.poetry]
name = "nail-app"
version = "0.1.0"
description = "Open-source Telegram booking bot for beauty masters (маникюр и не только)."
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
SQLAlchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.0"
python-dotenv = "^1.0.1"
tzdata = "^2024.1"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.0"
black = "^24.8.0"
mypy = "^1.11.0"
types-python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

